# Perturb2Target

./: .gitignore  README.md  REPRODUCE.md  p2d_string_edges.parquet  requirements.txt  target_nomination_pipeline.ipynb
MS_data/: disease_direction_MS.parquet  disease_direction_MS_cleaned.parquet  disease_direction_MS_full.parquet  ms_reversal_corrected.parquet  perturb_projected_integrated.parquet  perturb_reversal_MS.parquet
boltz_structural_screen/: ADAM19.yaml  BRD1.yaml  CTSH.yaml  DAGLB.yaml  GPR55.yaml  IRAK3.yaml  NCOA2.yaml  NEK6.yaml  PIK3C3.yaml  PRKX.yaml  README.md  SIK2.yaml  collect_boltz_results.py  manifest.csv  manifest.json  run_boltz.sh  submit_boltz_hosted.py
explorer/: README.md  _bundle_genes.json  _sig_rows.json  app.py  diagnose.py  map_by_condition.parquet  ms_drug_concordance.csv  ms_generalization_summary.json  ms_projection_app.parquet  requirements.txt  signature_response.parquet
inputs/: druggable_class_map.csv  inputs_README.md  program_signature.csv
outputs/: project_outputs.md
outputs/directional_screen/: README.md  pyproject.toml
outputs/directional_screen/directional_screen/: __init__.py  benchmark.py  calibration.py  scoring.py
outputs/directional_screen/directional_screen/data/: directional_benchmark_v1.csv  directional_benchmark_v1.dictionary.json
outputs/directional_screen/examples/: worked_example.py
path2drug/: README.md  path2drug.py
src/: 01_acquire_validate_inputs.py  02_program_signature.py  03_directional_scoring.py  04_genetics_support.py  04a_open_targets_fetch.py  05_druggability.py  (+4 more)
(+73 files in other folders)
