[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "directional_screen"
version = "1.0.0"
description = "Directional target nomination from massively-multiplexed perturbation screens"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]

[tool.setuptools]
packages = ["directional_screen"]

[tool.setuptools.package-data]
directional_screen = ["data/*.csv", "data/*.json"]
